[project]
name = "simpleSurvey"
version = "0.0.1"
description = "BlueOS Simple ping survey"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "jinja2==2.11.3",
    "flask==1.1.2",
    "markupsafe==2.0.1"
    "itsdangerous=2.0.1"
]

